Fix layout issue caused by fixed width hr element.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,7 +273,7 @@ a:hover {
 }
 
 #footer hr {
-    width: 400px;
+    max-width: 400px;
     margin: 20px auto;
     border: 2px solid white;
 }
